# mev-share-client-rs

./: Cargo.toml  README.md
examples/: .env.example  historical_stream_data.rs  send_backrun_bundle.rs  send_bundle.rs  send_private_tx.rs
examples/common/: builders.rs  config.rs  mock_tx.rs  mod.rs  tracing.rs
examples/utils/: config.rs  error.rs  log.rs  mod.rs
src/: client.rs  error.rs  lib.rs  prelude.rs  provider.rs
src/api/: mod.rs  networks.rs  rest_client.rs  rpc_client.rs
src/api/types/: mod.rs
src/api/types/rpc/: event_history.rs  helpers.rs  mod.rs  send_bundle.rs  send_transaction.rs  simulate_bundle.rs
src/api/types/streaming/: event_streaming.rs  helpers.rs  mod.rs
src/helpers/: mod.rs  provider.rs  selector.rs
