[package]

name = "mev-share-client"
version = "0.1.0"
edition = "2021"
authors = ["optimiz-r <optimizooor@protonmail.com>"]


[dependencies]

# network
reqwest = "0.11.17"
reqwest-eventsource = "0.4.0"

# web3
ethers = { version = "2.0.4", features = ["ws"] }

# (de)serialization
serde = "1.0.162"
serde_json = "1.0.96"
serde_qs = "0.12.0"

# tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# async runtime for `Future`s management
tokio = "1.28.0"
tokio-stream = "0.1.14"

# language utilities
thiserror = "1.0.40"
derive_builder = "0.12.0"


[dev-dependencies]

# load .env in `Config` struct
dotenv = "0.15.0"
envconfig = "0.10.0"
sugars = "3.0.1"


# default features do not include `#[tokio::main]`
tokio = { version = "1.28.0", features = ["full"] }
